Changed weight of text in bio modal

--- a/home/templates/includes/modal-bio.html
+++ b/home/templates/includes/modal-bio.html
@@ -6,20 +6,20 @@
                 <h5 class="modal-title" id="modalLabel">Biography</h5>
             </div>
             <div class="modal-body">
-                <p>
-                    <span class="accent-modal">Guillermo</span> was born and grew up in Argentina and, albeit not a typical Argentinian, he still retains certain national characteristics including the love for <span class="accent-modal">cooking</span>, the vehemency for <span class="accent-modal">debating</span> and the passion for making <span class="accent-modal">music</span>.</p>
-                <p>
-                    Guillermo settled in The Netherlands in 1995 in order to perfect his skills in <span class="accent-modal">at least one</span> of those disciplines.
+                <p class="font-weight-light">
+                    <span class="accent font-weight-normal">Guillermo</span> was born and grew up in Argentina and, albeit not a typical Argentinian, he still retains certain national characteristics including the love for cooking, the vehemency for debating and the passion for making music.</p>
+                <p class="font-weight-light">
+                    Guillermo settled in The Netherlands in 1995 in order to perfect his skills in at least one of those disciplines.
                 </p>
-                <p>
-                    He graduated from the <span class="accent-modal">Conservatory of Amsterdam</span> and has collaborated as a soloist and basso continuo player with many renowned orchestras including the Residentie Orkest, Nederlands Kamerorkest and The New Dutch Academy. </p>
-                <p>
-                    It is, however, in making <span class="accent-modal">chamber music</span> that Guillermo’s unique improvisational skills and his “supple gravitas” on the harpsichord can be properly enjoyed. His debut solo recording,<span class="accent-modal">“Ciaconna”</span>, has been released on Resonus Classics with enthusiastic reviews (BBC Music Magazine Instrumental Choice May 2014) followed by <span class="accent-modal">“Divine Noise”</span>, a recording of his own arrangement for two harpsichords of the opera Platée by Jean-Philippe Rameau, together with Dutch harpsichordist and former teacher <span class="accent-modal">Menno van Delft</span>.
+                <p class="font-weight-light">
+                    He graduated from the Conservatory of Amsterdam and has collaborated as a soloist and basso continuo player with many renowned orchestras including the Residentie Orkest, Nederlands Kamerorkest and The New Dutch Academy. </p>
+                <p class="font-weight-light">
+                    It is, however, in making chamber music that Guillermo’s unique improvisational skills and his “supple gravitas” on the harpsichord can be properly enjoyed. His debut solo recording,“Ciaconna”, has been released on Resonus Classics with enthusiastic reviews (BBC Music Magazine Instrumental Choice May 2014) followed by “Divine Noise”, a recording of his own arrangement for two harpsichords of the opera Platée by Jean-Philippe Rameau, together with Dutch harpsichordist and former teacher Menno van Delft.
                 </p>
-                <p>
-                    A co-founder of successful <span class="accent-modal">Ensemble Fantasticus</span>, he recorded 6 albums with this critically acclaimed baroque trio.
-                    Next to it, Guillermo has a lifelong mission to rediscover and promote the neglected work of <span class="accent-modal">Wilhelm Friedemann Bach</span>.
-                    Guillermo is very active as a researcher and <span class="accent-modal">music editor</span>, working in close cooperation with <span class="accent-modal">Cambridge University Press</span> and other international institutions, having prepared first editions of numerous works from the XVII and XVIII centuries.
+                <p class="font-weight-light">
+                    A co-founder of successful Ensemble Fantasticus, he recorded 6 albums with this critically acclaimed baroque trio.
+                    Next to it, Guillermo has a lifelong mission to rediscover and promote the neglected work of Wilhelm Friedemann Bach.
+                    Guillermo is very active as a researcher and music editor, working in close cooperation with Cambridge University Press and other international institutions, having prepared first editions of numerous works from the XVII and XVIII centuries.
                 </p>
             </div>
             <div class="modal-footer">
