Corrected button modal bio

--- a/home/templates/includes/modal-bio.html
+++ b/home/templates/includes/modal-bio.html
@@ -19,11 +19,13 @@
                 <p class="font-weight-light">
                     A co-founder of successful Ensemble Fantasticus, he recorded 6 albums with this critically acclaimed baroque trio.
                     Next to it, Guillermo has a lifelong mission to rediscover and promote the neglected work of Wilhelm Friedemann Bach.
+                </p>
+                <p class="font-weight-light">
                     Guillermo is very active as a researcher and music editor, working in close cooperation with Cambridge University Press and other international institutions, having prepared first editions of numerous works from the XVII and XVIII centuries.
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-outline-black rounded-0" data-dismiss="modal">Close</button>
+                <button type="button" class="btn  btn-black rounded-0" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
