--- a/home/templates/includes/modal-bio.html
+++ b/home/templates/includes/modal-bio.html
@@ -1,5 +1,6 @@
-<!-- Modal -->
-<div class="modal fade" id="biography" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+<!-- Modal biography-->
+<div class="modal fade" id="biography" tabindex="-1" role="dialog"
+    aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,25 +8,50 @@
             </div>
             <div class="modal-body">
                 <p class="font-weight-light">
-                    <span class="accent font-weight-normal">Guillermo</span> was born and grew up in Argentina and, albeit not a typical Argentinian, he still retains certain national characteristics including the love for cooking, the vehemency for debating and the passion for making music.</p>
-                <p class="font-weight-light">
-                    Guillermo settled in The Netherlands in 1995 in order to perfect his skills in at least one of those disciplines.
+                    <span class="accent font-weight-normal">Guillermo</span> was
+                    born and grew up in Argentina and, albeit not a typical
+                    Argentinian, he still retains certain national
+                    characteristics including the love for cooking, the
+                    vehemency for debating and the passion for making music.
                 </p>
                 <p class="font-weight-light">
-                    He graduated from the Conservatory of Amsterdam and has collaborated as a soloist and basso continuo player with many renowned orchestras including the Residentie Orkest, Nederlands Kamerorkest and The New Dutch Academy. </p>
-                <p class="font-weight-light">
-                    It is, however, in making chamber music that Guillermo’s unique improvisational skills and his “supple gravitas” on the harpsichord can be properly enjoyed. His debut solo recording,“Ciaconna”, has been released on Resonus Classics with enthusiastic reviews (BBC Music Magazine Instrumental Choice May 2014) followed by “Divine Noise”, a recording of his own arrangement for two harpsichords of the opera Platée by Jean-Philippe Rameau, together with Dutch harpsichordist and former teacher Menno van Delft.
+                    Guillermo settled in The Netherlands in 1995 in order to
+                    perfect his skills in at least one of those disciplines.
                 </p>
                 <p class="font-weight-light">
-                    A co-founder of successful Ensemble Fantasticus, he recorded 6 albums with this critically acclaimed baroque trio.
-                    Next to it, Guillermo has a lifelong mission to rediscover and promote the neglected work of Wilhelm Friedemann Bach.
+                    He graduated from the Conservatory of Amsterdam and has
+                    collaborated as a soloist and basso continuo player with
+                    many renowned orchestras including the Residentie Orkest,
+                    Nederlands Kamerorkest and The New Dutch Academy. </p>
+                <p class="font-weight-light">
+                    It is, however, in making chamber music that Guillermo’s
+                    unique improvisational skills and his “supple gravitas” on
+                    the harpsichord can be properly enjoyed. His debut solo
+                    recording,“Ciaconna”, has been released on Resonus Classics
+                    with enthusiastic reviews (BBC Music Magazine Instrumental
+                    Choice May 2014) followed by “Divine Noise”, a recording of
+                    his own arrangement for two harpsichords of the opera Platée
+                    by Jean-Philippe Rameau, together with Dutch harpsichordist
+                    and former teacher Menno van Delft.
                 </p>
                 <p class="font-weight-light">
-                    Guillermo is very active as a researcher and music editor, working in close cooperation with Cambridge University Press and other international institutions, having prepared first editions of numerous works from the XVII and XVIII centuries.
+                    A co-founder of successful Ensemble Fantasticus, he recorded
+                    6 albums with this critically acclaimed baroque trio.
+                    Next to it, Guillermo has a lifelong mission to rediscover
+                    and promote the neglected work of Wilhelm Friedemann Bach.
+                </p>
+                <p class="font-weight-light">
+                    Guillermo is very active as a researcher and music editor,
+                    working in close cooperation with Cambridge University Press
+                    and other international institutions, having prepared first
+                    editions of numerous works from the XVII and XVIII
+                    centuries.
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn  btn-black rounded-0" data-dismiss="modal">Close</button>
+                <button type="button" class="btn  btn-black rounded-0"
+                    data-dismiss="modal">Close
+                </button>
             </div>
         </div>
     </div>
